<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="afc_hint_double_tap_to_select_file">Double tap to select file/ folder</string>
    <string name="afc_pmsg_cannot_access_dir">Can not access \"%1$s\"</string>
    <string name="afc_title_choose_files">Choose files…</string>
    <string name="afc_title_choose_directories">Choose folders…</string>
    <string name="afc_title_choose_files_and_directories">Choose files/ folders…</string>
    <string name="afc_msg_filename_is_empty">Filename is empty</string>
    <string name="afc_pmsg_confirm_replace_file">This file \"%1$s\" already exists.\n\nDo you want to replace it?</string>
    <string name="afc_hint_save_as_filename">filename</string>
    <string name="afc_title_save_as">Save as…</string>
    <string name="afc_pmsg_filename_is_directory">\"%1$s\" is a folder</string>
    <string name="afc_pmsg_filename_is_invalid">File name \"%1$s\" is invalid</string>
    <string name="afc_msg_loading">Loading…</string>
    <string name="afc_pmsg_max_file_count_allowed">…has more files, max allowed: %1$,d</string>
    <string name="afc_app_name">android-filechooser</string>
    <string name="afc_cmd_sort_by_name">Sort by name</string>
    <string name="afc_cmd_sort_by_size">Sort by size</string>
    <string name="afc_cmd_sort_by_date">Sort by date</string>
    <string name="afc_msg_cannot_connect_to_file_provider_service">Can not connect to file provider service</string>
    <string name="afc_pmsg_unknown_error">Unknown error: %1$s</string>
    <string name="afc_title_error">Error</string>
    <string name="afc_title_info">Info</string>
    <string name="afc_title_alert">Alert</string>
    <string name="afc_cmd_new_folder">New folder…</string>
    <string name="afc_hint_folder_name">folder name</string>
    <string name="afc_msg_done">Done</string>
    <string name="afc_pmsg_cannot_create_folder">Can not create folder \"%1$s\"</string>
    <string name="afc_ellipsize">…</string>
    <string name="afc_root">Root</string>
    <string name="afc_folder">folder</string>
    <string name="afc_file">file</string>
    <string name="afc_pmsg_confirm_delete_file">Are you sure you want to delete this %1$s \"%2$s\"?</string>
    <string name="afc_title_confirmation">Confirmation</string>
    <string name="afc_msg_cancelled">Cancelled</string>
    <string name="afc_pmsg_file_has_been_deleted">…%1$s \"%2$s\" has been deleted</string>
    <string name="afc_pmsg_cannot_delete_file">Can not delete %1$s \"%2$s\"</string>
    <string name="afc_pmsg_deleting_file">Deleting %1$s \"%2$s\"…</string>
    <string name="afc_msg_empty">…empty</string>
    <string name="afc_cmd_grid_view">Grid view</string>
    <string name="afc_cmd_list_view">List view</string>
    <string name="afc_cmd_home">Home</string>
    <string name="afc_msg_app_doesnot_have_permission_to_delete_files">This application does not have permission to delete files/ folders</string>
    <string name="afc_msg_app_doesnot_have_permission_to_create_files">This application does not have permission to create files/ folders</string>
    <string name="afc_cmd_reload">Reload…</string>

</resources>